--- a/BaseR.qmd
+++ b/BaseR.qmd
@@ -4,102 +4,145 @@ format: html
 editor: visual
 ---
 
-#Task 1: Basic Vector Practice
+## Task 1: Basic Vector Practice
+
 Create vectors.
+
 ```{r}
 prebp <- c(120, 151, 125, 126, 115, 132, 132, 129, 134, 139, 127, 122, 127, 135, 133, 128, 147, 138, 140, 132)
 
 postbp <- c(127, 145, 135, 122, 115, 122, 123, 126, 126, 129, 132, 146, 120, 114, 121, 120, 128, 120, 133, 115)
 ```
+
 Assign names to the vectors.
+
 ```{r}
 names(prebp) <- paste("Subject", 1:20, sep = "_")
 names(postbp) <- paste("Subject", 1:20, sep = "_")
 ```
+
 Calculating the change in blood pressure between measurements.
+
 ```{r}
 diffbp <- prebp-postbp
 ```
+
 Calculating average decrease in blood pressure across all patients.
+
 ```{r}
 mean(diffbp)
 ```
+
 Determine which patients experienced a decrease in blood pressure after treatment (a positive change).
+
 ```{r}
 which(diffbp > 0)
 ```
+
 Subset differences vector to only return positive change.
+
 ```{r}
 positivechange <- diffbp > 0
 positivechange2 <- diffbp[positivechange]
 ```
-Calculating average decrease  in blood pressure for those where the blood pressure decreased (positive change).
+
+Calculating average decrease in blood pressure for those where the blood pressure decreased (positive change).
+
 ```{r}
 mean(positivechange2)
 ```
-#Task 2: Basic Data Frame Practice
+
+## Task 2: Basic Data Frame Practice
+
 Creating data frame.
+
 ```{r}
 bp_df <- data.frame(patient = names(prebp), pre_bp = prebp, post_bp = postbp, diff_bp = diffbp)
 ```
+
 Return rows where diffpb column is negative.
+
 ```{r}
 final_bp_df <- subset(bp_df, diffbp < 0)
 ```
+
 Adding column where post_bp is less than 120.
+
 ```{r}
 final_bp_df$post_bp_less_than_120 <- final_bp_df$post_bp < 120
 ```
+
 Printing the data frame.
+
 ```{r}
 knitr::kable(final_bp_df)
 ```
-#Task 3: List Practice
+
+## Task 3: List Practice
+
 Creating vectors with the new placebo data set.
+
 ```{r}
 prebp2 <- c(138, 135, 147, 117, 152, 134, 114, 121, 131, 130)
 postbp2 <- c(105, 136, 123, 130, 134, 143, 135, 139, 120, 124)
 ```
+
+Naming vectors
 
 ```{r}
 names(prebp2) <- paste("Subject", 1:10, sep = "_")
 names(postbp2) <- paste("Subject", 1:10, sep = "_")
 ```
 
+Calculating change in blood pressure.
+
 ```{r}
 diffbp2 <- prebp2-postbp2
 ```
 
 Determine which patients experienced a decrease in blood pressure after treatment (a positive change).
+
 ```{r}
 which(diffbp2 > 0)
 ```
 
 Subset differences vector to only return positive change.
+
 ```{r}
 positivechange01 <- diffbp > 0
 positivechange02 <- diffbp[positivechange]
 ```
+
 Creating a data frame from placebo data.
+
 ```{r}
 bp_df2 <- data.frame(patient = names(prebp2), pre_bp = prebp2, post_bp = postbp2, diff_bp = diffbp2)
 ```
+
 Returning postbp values of less than 120.
+
 ```{r}
 bp_df2$post_bp_less_than_120 <- postbp2 < 120
 ```
+
 Returning rows where diffbp is negative
+
 ```{r}
 final_bp_df2 <- subset(bp_df2, diffbp2 < 0)
 ```
+
 Creating a list from the two data frames.
+
 ```{r}
 bplist <- list(treatment = final_bp_df, placebo = final_bp_df2)
 ```
+
 Accessing the first list element using three types of syntax.
+
 ```{r}
 bplist [1]
 ```
+
 ```{r}
 bplist [[1]]
 ```
@@ -107,8 +150,9 @@ bplist [[1]]
 ```{r}
 bplist$treatment
 ```
+
 Accessing prebp column of placebo data frame.
+
 ```{r}
 head(bplist$placebo[2])
 ```
-
